# image_ocr

./: Cargo.toml  README.md
captura-cpp/: CMakeLists.txt
captura-cpp/src/: captura.cpp  captura.hpp  defines.hpp  main.cpp
captura-cpp/src/debug/: Log.cpp
captura-cpp/src/helpers/: LayerSurface.cpp  Monitor.cpp  PoolBuffer.cpp
captura-cpp/src/ocr/: Base64.hpp  GeminiOCR.cpp  GeminiOCR.hpp  OCR.hpp  OllamaOCR.cpp  OllamaOCR.hpp  PaddleOCR.cpp  PaddleOCR.hpp  TesseractOCR.cpp  TesseractOCR.hpp
servidorOcr/: ocr_server.py  pyproject.toml  server.py
src/: gemini.rs  main.rs  ollama.rs  paddle_client.rs
v1/src/: main.rs  ollama.rs
