[package]
name = "captura-extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
libwayshot = "0.2.0"
image = "0.25.1"
rusty-tesseract = "1.1.6"
ollama-rs = { version = "0.3.2", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22.1"
lazy_static = "1.4.0"
tokio-stream = "0.1" 
arboard = "3.5.0"
